bondster-bco (1.2.1) unstable; urgency=low

  * Bugfix of vault create account format
  * Rolling contract

 -- Jan Cajthaml <jan.cajthaml@gmail.com>  Mon, 15 Apr 2019 10:17:21 +0200

bondster-bco (1.2.0) unstable; urgency=low

  * Integrate ledger instead of wall
  * Added proper purpose for self-signed cert
  * Updated copyright year to 2019
  * Bump github.com/gorilla/mux in /services/bondster-bco-rest
  * Bump github.com/sirupsen/logrus in /services/bondster-bco-import
  * Bump github.com/sirupsen/logrus in /services/bondster-bco-rest
  * Bump github.com/jancajthaml-openbank/local-fs
  * Require config file presence for units
  * Bump github.com/jancajthaml-openbank/local-fs
  * Update config.yml
  * Start daemon after app starts

 -- Jan Cajthaml <jan.cajthaml@gmail.com>  Sun, 14 Apr 2019 15:52:49 +0200

bondster-bco (1.1.2) unstable; urgency=low

  * Blackbox-testing install and uninstall
  * Namespaced unit with configuration change watch
  * Bump github.com/json-iterator/go in /services/bondster-bco-unit
  * Bump github.com/json-iterator/go in /services/bondster-bco-rest
  * Bump github.com/sirupsen/logrus in /services/bondster-bco-unit
  * Bump github.com/sirupsen/logrus in /services/bondster-bco-rest
  * Bump github.com/jancajthaml-openbank/local-fs
  * Bumps [github.com/jancajthaml-openbank/local-fs](https://github.com/jancajthaml-openbank/local-fs) from 1.0.1 to 1.0.2. - [Release notes](https://github.com/jancajthaml-openbank/local-fs/releases) - [Commits](jancajthaml-openbank/local-fs@v1.0.1...v1.0.2)
  * Bump github.com/gorilla/mux in /services/bondster-bco-rest
  * Added dependabot and sonar shield
  * Preinstall same version required by debian dependency in bbtest
  * Include security patches in zmq version constrain

 -- Jan Cajthaml <jan.cajthaml@gmail.com>  Mon, 18 Mar 2019 09:29:07 +0100

bondster-bco (1.1.1) unstable; urgency=low

  * Pre-release cleanup
  * Forward throught originators if possible
