@@ -83,8 +83,8 @@ step "bondster-bco is reconfigured with" do |configuration|
     "SYNC_RATE" => "1h",
     "VAULT_GATEWAY" => "https://127.0.0.1:4400",
     "LEDGER_GATEWAY" => "https://127.0.0.1:4401",
-    "METRICS_OUTPUT" => "/reports/metrics.json",
     "LAKE_HOSTNAME" => "127.0.0.1",
+    "METRICS_OUTPUT" => "/reports/metrics.json",
     "METRICS_REFRESHRATE" => "1h",
     "HTTP_PORT" => "443",
     "SECRETS" => "/opt/bondster-bco/secrets",
