@@ -1,5 +1,5 @@
 Package: bondster-bco
-Version: 1.2.1+malformed-ledger-requests
+Version: 1.2.1+better-http-helper-bbtest
 Architecture: amd64
 Maintainer: Jan Cajthaml <jan.cajthaml@gmail.com>
 Depends: init-system-helpers (>= 1.18~), libzmq5 (>= 4.2.1~), openssl (>= 1.1~)
